--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_navigation">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_navigation"
+    app:startDestination="@id/characterFragment">
 
+    <fragment
+        android:id="@+id/characterFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.character_screen.CharacterFragment"
+        android:label="Characters"
+        tools:layout="@layout/fragment_character" >
+        <action
+            android:id="@+id/action_characterFragment_to_characterDetailScreen"
+            app:destination="@id/characterDetailScreen" />
+    </fragment>
+    <fragment
+        android:id="@+id/episodeFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.episode_screen.EpisodeFragment"
+        android:label="Episodes"
+        tools:layout="@layout/fragment_episode" />
+    <fragment
+        android:id="@+id/locationFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.location_screen.LocationFragment"
+        android:label="Locations"
+        tools:layout="@layout/fragment_location" />
+    <fragment
+        android:id="@+id/characterDetailScreen"
+        android:name="com.teckzi.rickandmorty.presentation.screens.character_detail_screen.CharacterDetailFragment"
+        android:label="CharacterDetailScreen" >
+        <argument android:name="characterId"
+            app:argType="integer" />
+    </fragment>
 </navigation>
