--- a/app/src/main/res/layout/item_error.xml
+++ b/app/src/main/res/layout/item_error.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/error_message"
     android:layout_width="match_parent"
@@ -11,5 +10,4 @@
     android:textAllCaps="true"
     android:textAppearance="?textAppearanceSubtitle1"
     android:textColor="?colorError"
-    tools:text="Unknown error"
-    />
+    tools:text="Unknown error" />
