--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_characterFragment_to_characterDetailScreen"
             app:destination="@id/characterDetailScreen" />
+        <action
+            android:id="@+id/action_characterFragment_to_bottomSheet"
+            app:destination="@id/bottomSheet" />
     </fragment>
     <fragment
         android:id="@+id/episodeFragment"
@@ -32,4 +35,16 @@
             android:name="characterId"
             app:argType="integer" />
     </fragment>
+    <dialog
+        android:id="@+id/bottomSheet"
+        android:name="com.teckzi.rickandmorty.presentation.common.bottom_sheet.BottomSheet"
+        android:label="fragment_bottom_sheet"
+        tools:layout="@layout/fragment_bottom_sheet" >
+        <action
+            android:id="@+id/action_bottomSheet_to_characterFragment"
+            app:destination="@id/characterFragment" />
+        <argument
+            android:name="filterType"
+            app:argType="string" />
+    </dialog>
 </navigation>
