--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -7,17 +7,6 @@
     android:background="@color/main_color"
     tools:context=".presentation.screens.character_screen.CharacterFragment">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CHARACTER FRAGMENT"
-        android:textSize="32sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/errorImage"
         android:layout_width="match_parent"
@@ -29,7 +18,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/error_image" />
 
     <ProgressBar
         android:id="@+id/characterProgressBar"
