--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="Network error"
+        android:text="@string/nothing_to_show"
         android:textColor="@color/small_text_color"
         android:textSize="20sp"
         android:visibility="gone"
