add splashScreen, update characterdetails

--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -7,10 +7,22 @@
     android:background="@color/main_color"
     tools:context=".presentation.screens.character_screen.CharacterFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintBottom_toTopOf="@+id/swipeRefreshLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/Theme.AppCompat.Light" />
+
     <ImageView
         android:id="@+id/errorImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/error_image"
         android:src="@drawable/ic_network_error"
         android:textAlignment="center"
         android:textSize="32sp"
@@ -18,8 +30,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/error_image" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/characterProgressBar"
@@ -50,11 +61,11 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:srl_direction="both"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:srl_direction="both">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/characterMainRecyclerView"
