--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -12,7 +12,8 @@
         tools:layout="@layout/fragment_character">
         <action
             android:id="@+id/action_characterFragment_to_characterDetailScreen"
-            app:destination="@id/characterDetailScreen" />
+            app:destination="@id/characterDetailFragment"
+            app:popUpTo="@id/characterFragment"/>
         <action
             android:id="@+id/action_characterFragment_to_bottomSheet"
             app:destination="@id/bottomSheet" />
@@ -27,6 +28,7 @@
             app:destination="@id/bottomSheet" />
         <action
             android:id="@+id/action_episodeFragment_to_episodeDetailFragment"
+            app:popUpTo="@id/episodeFragment"
             app:destination="@id/episodeDetailFragment" />
     </fragment>
     <fragment
@@ -39,29 +41,30 @@
             app:destination="@id/bottomSheet" />
         <action
             android:id="@+id/action_locationFragment_to_locationDetailFragment"
-            app:destination="@id/locationDetailFragment" />
+            app:destination="@id/locationDetailFragment"
+            app:popUpTo="@id/locationFragment" />
     </fragment>
     <fragment
-        android:id="@+id/characterDetailScreen"
+        android:id="@+id/characterDetailFragment"
         android:name="com.teckzi.rickandmorty.presentation.screens.character_detail_screen.CharacterDetailFragment"
-        android:label="CharacterDetailScreen">
+        android:label="Character Details">
         <argument
             android:name="characterId"
-            app:argType="integer" />
+            app:argType="integer"/>
         <action
-            android:id="@+id/action_characterDetailScreen_to_episodeDetailFragment"
-            app:destination="@id/episodeDetailFragment" />
+            android:id="@+id/action_characterDetailFragment_to_episodeDetailFragment"
+            app:destination="@id/episodeDetailFragment"/>
         <action
-            android:id="@+id/action_characterDetailScreen_to_episodeFragment"
+            android:id="@+id/action_characterDetailFragment_to_episodeFragment"
             app:destination="@id/episodeFragment" />
         <action
-            android:id="@+id/action_characterDetailScreen_to_locationDetailFragment"
-            app:destination="@id/locationDetailFragment" />
+            android:id="@+id/action_characterDetailFragment_to_locationDetailFragment"
+            app:destination="@id/locationDetailFragment"/>
     </fragment>
     <dialog
         android:id="@+id/bottomSheet"
         android:name="com.teckzi.rickandmorty.presentation.common.bottom_sheet.BottomSheet"
-        android:label="fragment_bottom_sheet"
+        android:label="Filter"
         tools:layout="@layout/fragment_bottom_sheet">
         <action
             android:id="@+id/action_bottomSheet_to_characterFragment"
@@ -79,14 +82,11 @@
     <fragment
         android:id="@+id/episodeDetailFragment"
         android:name="com.teckzi.rickandmorty.presentation.screens.episode_detail_screen.EpisodeDetailFragment"
-        android:label="fragment_episode_detail"
+        android:label="Episode Details"
         tools:layout="@layout/fragment_episode_detail">
         <action
-            android:id="@+id/action_episodeDetailFragment_to_episodeFragment"
-            app:destination="@id/episodeFragment" />
-        <action
             android:id="@+id/action_episodeDetailFragment_to_characterDetailScreen"
-            app:destination="@id/characterDetailScreen" />
+            app:destination="@id/characterDetailFragment"/>
         <argument
             android:name="episodeId"
             app:argType="integer" />
@@ -97,11 +97,11 @@
     <fragment
         android:id="@+id/locationDetailFragment"
         android:name="com.teckzi.rickandmorty.presentation.screens.location_detail_screen.LocationDetailFragment"
-        android:label="fragment_location_detail"
+        android:label="Location Details"
         tools:layout="@layout/fragment_location_detail">
         <action
             android:id="@+id/action_locationDetailFragment_to_characterDetailScreen"
-            app:destination="@id/characterDetailScreen" />
+            app:destination="@id/characterDetailFragment" />
         <argument
             android:name="locationId"
             app:argType="integer" />
