--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/characterFragment"
-        android:name="com.teckzi.rickandmorty.presentation.screens.character_screen.CharacterFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.characterscreen.CharacterFragment"
         android:label="Characters"
         tools:layout="@layout/fragment_character">
         <action
@@ -20,7 +20,7 @@
     </fragment>
     <fragment
         android:id="@+id/episodeFragment"
-        android:name="com.teckzi.rickandmorty.presentation.screens.episode_screen.EpisodeFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.episodescreen.EpisodeFragment"
         android:label="Episodes"
         tools:layout="@layout/fragment_episode">
         <action
@@ -33,7 +33,7 @@
     </fragment>
     <fragment
         android:id="@+id/locationFragment"
-        android:name="com.teckzi.rickandmorty.presentation.screens.location_screen.LocationFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.locationscreen.LocationFragment"
         android:label="Locations"
         tools:layout="@layout/fragment_location">
         <action
@@ -46,7 +46,7 @@
     </fragment>
     <fragment
         android:id="@+id/characterDetailFragment"
-        android:name="com.teckzi.rickandmorty.presentation.screens.character_detail_screen.CharacterDetailFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.characterdetailscreen.CharacterDetailFragment"
         android:label="Character Details">
         <argument
             android:name="characterId"
@@ -63,7 +63,7 @@
     </fragment>
     <dialog
         android:id="@+id/bottomSheet"
-        android:name="com.teckzi.rickandmorty.presentation.common.bottom_sheet.BottomSheet"
+        android:name="com.teckzi.rickandmorty.presentation.common.bottomsheet.BottomSheet"
         android:label="Filter"
         tools:layout="@layout/fragment_bottom_sheet">
         <action
@@ -81,7 +81,7 @@
     </dialog>
     <fragment
         android:id="@+id/episodeDetailFragment"
-        android:name="com.teckzi.rickandmorty.presentation.screens.episode_detail_screen.EpisodeDetailFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.episodedetailscreen.EpisodeDetailFragment"
         android:label="Episode Details"
         tools:layout="@layout/fragment_episode_detail">
         <action
@@ -96,7 +96,7 @@
     </fragment>
     <fragment
         android:id="@+id/locationDetailFragment"
-        android:name="com.teckzi.rickandmorty.presentation.screens.location_detail_screen.LocationDetailFragment"
+        android:name="com.teckzi.rickandmorty.presentation.screens.locationdetailscreen.LocationDetailFragment"
         android:label="Location Details"
         tools:layout="@layout/fragment_location_detail">
         <action
