--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context=".presentation.screens.character_screen.CharacterFragment">
+    tools:context=".presentation.screens.characterscreen.CharacterFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
