--- a/app/src/main/res/layout/fragment_episode.xml
+++ b/app/src/main/res/layout/fragment_episode.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context=".presentation.screens.episode_screen.EpisodeFragment">
+    tools:context=".presentation.screens.episodescreen.EpisodeFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
