--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context=".presentation.screens.location_screen.LocationFragment">
+    tools:context=".presentation.screens.locationscreen.LocationFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
